--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,53 @@
+argcomplete==1.12.3
 asgiref==3.4.1
 attrs==21.2.0
+boto3==1.19.12
+botocore==1.22.12
 certifi==2021.10.8
+cfn-flip==1.3.0
 charset-normalizer==2.0.7
+click==8.0.3
 Django==3.2.9
 django-filter==21.1
 django-guardian==2.4.0
 django-softdelete==0.9.2
 djangorestframework==3.12.4
 docopt==0.6.2
+durationpy==0.5
+future==0.18.2
+hjson==3.0.2
 idna==3.3
 iniconfig==1.1.1
+jmespath==0.10.0
+kappa==0.6.0
 Markdown==3.3.4
 model-bakery==1.3.3
 packaging==21.2
 pathlib==1.0.1
+pep517==0.12.0
+pip-tools==6.4.0
+placebo==0.10.0
 pluggy==1.0.0
 psycopg2==2.9.1
 py==1.11.0
 pyparsing==2.4.7
 pytest==6.2.5
 pytest-django==4.4.0
+python-dateutil==2.8.2
+python-slugify==5.0.2
 pytz==2021.3
+PyYAML==6.0
 requests==2.26.0
+s3transfer==0.5.0
 six==1.16.0
 sqlparse==0.4.2
+text-unidecode==1.3
 toml==0.10.2
+tomli==1.2.2
+tqdm==4.62.3
+troposphere==3.1.0
 urllib3==1.26.7
+Werkzeug==0.16.1
+wsgi-request-logger==0.4.6
 yarg==0.1.9
+zappa==0.54.0
