--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,8 +9,9 @@ services:
       - .:/usr/app
     ports:
       - 8000:8000
-    command: python manage.py runserver 0:8000
-
+    command: >
+        bash -c "python manage.py migrate
+        && python manage.py runserver 0.0.0.0:8000"
   postgres:
     image: postgres:9.6.23-alpine
     environment:
